# LLM-Assisted-API-Debugging-Lab

./: Cargo.toml  LICENSE  README.md  prose.toml
.github/workflows/: ci.yml
crates/llm-assisted-api-debugging-lab/: Cargo.toml  README.md
crates/llm-assisted-api-debugging-lab/fixtures/cases/: dns_config.json  webhook_signature.json
crates/llm-assisted-api-debugging-lab/src/: cases.rs  diagnose.rs  evidence.rs  lib.rs  llm_prompt.rs  main.rs  prose.rs  report.rs
crates/llm-assisted-api-debugging-lab/tests/: prompts.rs  prompts_json.rs  proptests.rs  reports.rs  shorts.rs
crates/llm-assisted-api-debugging-lab/tests/snapshots/: prompts__prompt@auth_missing.snap  prompts__prompt@bad_payload.snap  prompts__prompt@dns_config.snap  prompts__prompt@injection_attempt.snap  prompts__prompt@rate_limit.snap  prompts__prompt@timeout.snap  prompts__prompt@tls_failure.snap  prompts__prompt@webhook_signature.snap  prompts_json__prompt_json@auth_missing.snap  prompts_json__prompt_json@bad_payload.snap  prompts_json__prompt_json@dns_config.snap  prompts_json__prompt_json@injection_attempt.snap  prompts_json__prompt_json@rate_limit.snap  prompts_json__prompt_json@timeout.snap  prompts_json__prompt_json@tls_failure.snap  prompts_json__prompt_json@webhook_signature.snap  reports__report@auth_missing.snap  reports__report@bad_payload.snap  reports__report@dns_config.snap  reports__report@injection_attempt.snap  reports__report@rate_limit.snap  reports__report@timeout.snap  reports__report@tls_failure.snap  reports__report@webhook_signature.snap  shorts__short@auth_missing.snap  shorts__short@bad_payload.snap  shorts__short@dns_config.snap  shorts__short@injection_attempt.snap  shorts__short@rate_limit.snap  shorts__short@timeout.snap  shorts__short@tls_failure.snap  shorts__short@webhook_signature.snap
docs/: architecture.md  hiring_note.md  llm_assisted_workflow.md  support_escalation_note.md
fixtures/cases/: auth_missing.json  bad_payload.json  injection_attempt.json  rate_limit.json  timeout.json  tls_failure.json
notebooks/: llm_assisted_api_debugging_lab_colab.ipynb
scripts/: run_demo.sh
